# sciviscontest2026

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  task0_data.py  visualize_by_date.py  visualize_by_timestep.py
notebooks/: ieee_scivis_cmip6.ipynb  ieee_scivis_dyamond_ocean.ipynb
notebooks_examples/: CMIP6_using_Intake.ipynb  DYAMOND_GEOS_metadata.ipynb  LLC2160_metadata.ipynb  LLC4320_metadata.ipynb  ieee_scivis_cmip6.ipynb  ieee_scivis_dyamond_geos.ipynb  ieee_scivis_dyamond_ocean.ipynb  llc2160_metadata.py
notebooks_examples/.ipynb_checkpoints/: LLC2160_metadata-checkpoint.ipynb  LLC4320_metadata-checkpoint.ipynb
pages/: submission.md
